206: Remove overflow toggle, fix active class, attr error

--- a/themes/shiro/assets/src/sass/components/_primary-nav-toggle.scss
+++ b/themes/shiro/assets/src/sass/components/_primary-nav-toggle.scss
@@ -43,49 +43,3 @@
 		display: none;
 	}
 }
-
-.primary-nav__overflow-toggle {
-	border: none;
-	background: none;
-	color: $wmui-color-base30;
-	cursor: pointer;
-	display: inline-block;
-	font-family: $font-family-sans;
-	font-size: rem(14);
-	font-weight: 500;
-	line-height: 1.2;
-	margin: rem(12) rem(24) rem(12) rem(-10);
-	padding: rem(8) rem(10);
-
-	&[aria-expanded="false"] {
-		.btn-label-opened {
-			display: none;
-		}
-		.btn-label-closed {
-			display: block;
-		}
-	}
-
-	&[aria-expanded="true"] {
-		.btn-label-opened {
-			display: block;
-		}
-		.btn-label-closed {
-			display: none;
-		}
-	}
-
-	&[hidden] {
-		display: none;
-	}
-
-	&:hover {
-		background-color: $wmui-color-blue90;
-		color: $wmui-color-blue50;
-	}
-
-	&:active,
-	&:focus {
-		@include focus-ring;
-	}
-}
